I don't understand why there's a scroll bar on mobile, but this fixes it

--- a/public/css/general.css
+++ b/public/css/general.css
@@ -2,7 +2,7 @@ body
 {
 	font-family:"lucida grande", tahoma, verdana, arial, sans-serif;
 	font-size:12px;
-	width: 98%;
+	width: 95%;
 	margin: auto;
 	padding-top: 70px;
 }
